--- a/doc/2023032300,trigger.md
+++ b/doc/2023032300,trigger.md
@@ -1,4 +1,5 @@
-# try trigger workflow on web editor
+
+try trigger workflow on web editor
 
 > and also I removed the workflow config from master
 
